Changed the background of home,product and services page. Also modified the services and Products page

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -14,3 +14,12 @@
   text-decoration: underline;
   text-align: left;
 }
+
+.body{
+  background: linear-gradient(to bottom right, rgb(0, 225, 255), yellow);
+}
+
+.para{
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
+}
