--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,59 +1,198 @@
 <div class="container">
   <div class="jumbotron product">
-    
+    <h1 class="subtitle"> Our Products</h1>
+    <br/>
 
-      
-          <img src="../../assets/suspend.jpg" alt="Cyprus machine1" height="250" width="250"class="right"><br>
-          Suspended Platform
-       
-          <img src="../../assets/screed2.jpg" alt="Cyprus machine2" height="250" width="250"class="right"><br>
-          <img src="../../assets/floater.jpg" alt="Cyprus machine2" height="250" width="250"class="right">
-          <img src="../../assets/trowel.jpg" alt="Cyprus machine2" height="250" width="250"class="right"><br>
-          <img src="../../assets/Vdf pump.jpg" alt="Cyprus machine2" height="250" width="250"class="right">
-          <img src="../../assets/groove cutting.jpg" alt="Cyprus machine2" height="250" width="250"class="right"><br>
-          Vacuum Dewatering System
-        
-          <img src="../../assets/batch.jpeg" alt="Cyprus machine3" height="250" width="250"class="right"><br>
-          Automatic Static Scrapper Concrete Batching And Mixing Plant
-        
-          <img src="../../assets/inline.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Mobile Inline Concrete Batching And Mixing Plant
-        
-          <img src="../../assets/reversible.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Reversible Concrete Mixer<br>
-          <img src="../../assets/lift.jpg" alt= "cyprus machine5" height="250" width="250"class="right">
-         <img src="../../assets/hydraulic.jpg" alt= "cyprus machine5" height="250" width="250"class="right"><br>
-          Movable Concrete Mixer with Lift Movable Hydraulic Hopper Concrete Mixer with Lift<br>
+    <h5 class="subtitle">Suspended Platform</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/suspend.jpg" alt="Cyprus machine1" class="rounded imgcss">
+        <br>
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/suspended_1.png" alt="Cyprus machine1" class="rounded imgcss">
+        <br>
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/suspended_2.jpg" alt="Cyprus machine1" class="rounded imgcss">
+        <br>
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h5 class="subtitle">Vacuum Dewatering System</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/screed2.jpg" alt="Cyprus machine2" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/floater.jpg" alt="Cyprus machine2" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/trowel.jpg" alt="Cyprus machine2" class="rounded imgcss">
+      </div>
+    </div>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/Vdf pump.jpg" alt="Cyprus machine2" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/groove cutting.jpg" alt="Cyprus machine2" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h5 class="subtitle"> Automatic Static Scrapper Concrete Batching And Mixing Plant
+    </h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/batch.jpeg" alt="Cyprus machine3" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/mixer_1.jpeg" alt="Cyprus machine3" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/mixer_2.jpeg" alt="Cyprus machine3" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h5 class="subtitle"> Mobile Inline Concrete Batching And Mixing Plant
+    </h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/inline.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/mobile-inline_1.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/mobile-inline_2.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h5 class="subtitle"> Reversible Concrete Mixer</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/reversible.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/concrete_mixer1.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/concrete_mixer2.jpeg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h5 class="subtitle">Movable Concrete Mixer with Lift Movable Hydraulic Hopper Concrete Mixer with Lift</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/lift.jpg" alt="cyprus machine5" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/hydraulic.jpg" alt="cyprus machine5" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h4 class="subtitle">
+      <b>
+        <i>SURVEY AND LABORATORY EQUIPMENTS</i>
+      </b>
+    </h4>
+    <h5 class="subtitle"> Monkey Hoist</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/monkey2.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/monkey-hoist_1.jpeg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/monkey-hoist_2.jpeg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h5 class="subtitle">Plate Compactor</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/plate4.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/compactor_1.jpeg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/compactor_2.jpeg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h5 class="subtitle">Compressor Testing Machine</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/compressor.gif" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/compressor-testing-machine_1.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/compressor-testing-machine_2.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h5 class="subtitle">Bar cutting Machine</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/bar1.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/barcutting_1.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/barcutting_2.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h5 class="subtitle">Bar Bending Machine</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/bar2.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/bar_beng_1.jpeg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/bar_beng_2.jpeg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+    </div>
+    <br/>
 
-        
-          <b><i>SURVEY AND LABORATORY EQUIPMENTS</i></b><br>
-          <img src="../../assets/monkey2.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Monkey Hoist
-        
-          <img src="../../assets/plate4.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Plate Compactor
-       
-          <img src="../../assets/compressor.gif" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Compressor Testing Machine
-        
-          <img src="../../assets/bar1.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Bar cutting Machine
-        
-          <img src="../../assets/bar2.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Bar Bending Machine
-        
-          <img src="../../assets/inline.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Mobile Inline Concrete Batching And Mixing Plant
-        
-          <img src="../../assets/inline.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Mobile Inline Concrete Batching And Mixing Plant
-       
-          <img src="../../assets/inline.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Mobile Inline Concrete Batching And Mixing Plant
-        
-          <img src="../../assets/inline.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
-          Mobile Inline Concrete Batching And Mixing Plant
-        
-   
+    <!-- <h5 class="subtitle">Mobile Inline Concrete Batching And Mixing Plant</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/inline.jpg" alt="Cyprus machine4"  class="rounded imgcss">
+      </div>
+    </div>
+    <br/> -->
+
+
   </div>
 </div>
