--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,20 +1,88 @@
-
-
-<body>
 <div class="container">
-    <div class="jumbotron service">
-            <img src="../../assets/epoxy.jpg" alt="Cyprus machine1" height="450" width="700" class="center"><br>
-             EPOXY FLOORING<br>
-       
-          <img src="../../assets/vdf 3.jpg" alt="Cyprus machine2" height="450" width="350" class="center">
-          <img src="../../assets/v.jpg" alt="Cyprus machine2" height="450" width="350" class="center"><br>
-          VACUUM DEWATERING FLOORING<br>
-        
-          <img src="../../assets/water.jpg" alt="Cyprus machine3" height="450" width="700" class="center"><br>
-          WATER PROOFING<br>
-        
-          
-            
+  <div class="jumbotron service">
+    <h1 class="subtitle"> Our Services</h1>
+    <br/>
+    <h5 class="subtitle">EPOXY FLOORING</h5>
+    <br/>
+    <div class="para">
+      Epoxy is a term that’s come to represent a class of materials and the act of using those materials. Epoxy “systems” are based
+      on a combination of resins and hardeners. When mixed together, the resin and hardener chemically react to form a rigid
+      plastic material. The final material is strong, durable, resistant, and bonds extremely well to most base layers. Epoxy
+      floors are so strong that they’re often used in heavy traffic areas such as industrial environments, hospitals, or
+      sports facilities.
+    </div>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/epoxy.jpg" alt="Cyprus machine1" height="250" width="300">
+        <br/>
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/epoxy-flooring_2.jpg" alt="Cyprus machine1" height="250" width="300">
+        <br/>
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/Epoxy_3.jpg" alt="Cyprus machine1" height="250" width="300">
+        <br/>
+      </div>
+    </div>
+    <br/>
+    <h5 class="subtitle">VACUUM DEWATERING FLOORING</h5>
+    <br/>
+    <div class="para">
+      Tremix, as is popularly known in India, is actually Vacuum Dewatering process of concrete. It was originally invented by
+      Tremix AB, Sweden many years ago. This process was introduced in India by Aquarius Technologies in 1987. It became
+      so popular in India that almost everybody related to concrete flooring industry, may be manufacturers / contractors
+      / consultants started calling this process by the name of its inventor.
+      <br/>
+      <br/> The process essentially comprises of concrete levelling by Surface Vibrators, removal of excess water with the help
+      of Vacuum Pump and Suction Mats, and finishing the hardened concrete by Skimfloater / Power Trowel. If applied correctly,
+      this process gives definite advantages i.e. higher compressive strength, even finish, better joints, increased wear
+      resistance, less curing time etc. (please refer the Product catalogue for more information). The key part in this process
+      is the Vacuum Pump, Top Cover and Filter Pads as the performance of these determines the effectiveness of the process.
+      Bubble shaped Filter pads gives the best results as there is always free space for water to flow. The substitutes which
+      are commonly found on sites are made of Nylon nets and do not dewater the concrete correctly as there is no passage
+      for water to flow. The effectiveness of dewatering can be easily seen after the dewatering is stopped.
+    </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/vdf 3.jpg" alt="Cyprus machine2" height="250" width="300">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/v.jpg" alt="Cyprus machine2" height="250" width="300">
+        <br>
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/vaccum.jpg" alt="Cyprus machine2" height="250" width="300">
+        <br>
+      </div>
+    </div>
+    <br/>
+    <h5 class="subtitle">WATER PROOFING</h5>
+    <br/>
+    <div class="para">
+      Waterproofing is the process of making an object or structure waterproof or water-resistant so that it remains relatively
+      unaffected by water or resisting the ingress of water under specified conditions. Such items may be used in wet environments
+      or underwater to specified depths.
+      <br/>
+      <br/> Water resistant and waterproof often refer to penetration of water in its liquid state and possibly under pressure,
+      whereas damp proof refers to resistance to humidity or dampness.[1] Permeation of water vapor through a material or
+      structure is reported as a moisture vapor transmission rate.
+      <br/>
+      <br/> The hulls of boats and ships were once waterproofed by applying tar or pitch. Modern items may be waterproofed by
+      applying water-repellent coatings or by sealing seams with gaskets or o-rings.
+    </div>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/water.jpg" alt="Cyprus machine3" height="250" width="300">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/water_Proof_1.jpg" alt="Cyprus machine3" height="250" width="300">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/water_Proof.jpg" alt="Cyprus machine3" height="250" width="300">
+      </div>
     </div>
   </div>
-</body>
+</div>
