--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container mainbody">
     <!-- <h1 class="title"> Welcome to the Cyprus Corporation !!</h1> -->
-  <div class="jumbotron">
+  <div class="jumbotron body">
     <marquee>
       <h3 class="subtitle"> You can reach us at mob:- +91-8240539160</h3>
     </marquee>
@@ -17,26 +17,26 @@
       <!-- The slideshow -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../../assets/d.jpeg" alt="Cyprus machine1" height="350" width="700">
+          <img src="../../assets/d.jpeg" alt="Cyprus machine1" height="400" width="950">
         </div>
         <div class="carousel-item">
-          <img src="../../assets/3.jpg" alt="Cyprus machine2" height="350" width="700">
+          <img src="../../assets/3.jpg" alt="Cyprus machine2" height="400" width="950">
         </div>
         <div class="carousel-item">
-          <img src="../../assets/groove.jpg" alt="Cyprus machine3" height="350" width="700">
+          <img src="../../assets/groove.jpg" alt="Cyprus machine3" height="400" width="950">
         </div>
         <div class="carousel-item">
-          <img src="../../assets/c.jpg" alt="Cyprus machine4" height="350" width="700">
+          <img src="../../assets/c.jpg" alt="Cyprus machine4" height="400" width="950">
         </div>
       </div>
 
       <!-- Left and right controls -->
-      <!-- <a class="carousel-control-prev" href="#demo" data-slide="prev">
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
         <span class="carousel-control-prev-icon"></span>
       </a>
       <a class="carousel-control-next" href="#demo" data-slide="next">
         <span class="carousel-control-next-icon"></span>
-      </a> -->
+      </a>
     </div>
     <br/>
     <div class="body">
@@ -49,9 +49,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12 para">
             Established in the year 2013, We "CYPRUS CORPORATE CENTER" is one of Eastern India's greatest traders of
-             Construction Machineries ,Survey And Laboratory equipments . Our range finds extensive application 
+             Construction Machineries ,Survey And Laboratory equipments . Our range finds extensive application
              in various industries such as construction, mining.Our CYPRUS also provide very fine work in Vacuum Dewatering Flooring,
              Epoxy Flooring,Water Proofing etc. We have an experience of more than <b>20</b> years in this field. <br>
 
@@ -78,10 +78,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12">
-          
+        <div class="col-sm-12 para">
+
             We adhere to international standard to fabricate our assortment.
-            Efficiently handled by our diligent team, we have state-of-the-art manufacturing and designing unit to 
+            Efficiently handled by our diligent team, we have state-of-the-art manufacturing and designing unit to
             create a precision engineered range of Rebar Processing Machines & Construction Machinery.
             Owing to the technically advanced design, our range can withstand harsh conditions efficiently and effectively.
           <div class="row">
@@ -115,8 +115,8 @@
           </div>
         </div>
         <div class="row">
-            <div class="col-sm-12">
-              
+            <div class="col-sm-12 para">
+
               Till now we have worked with many companies such as DRDO,L&T, MES, MRO,Kashyapi Infrastructure Pvt. Ltd.,Macnally,
               MBECL and many more in the list to go.
               Right now we are working with Mcnally Bharat Engineering Ltd. in Barkagaon,Jharkhand and Jammu & Kashmir.
