--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,11 +1,34 @@
 .product {
-  background: linear-gradient(rgba(255, 255, 255, .5), rgba(255, 255, 255, .5)), url('../../assets/construction-product.jpg') no-repeat;
+  /* background: linear-gradient(rgba(255, 255, 255, .5), rgba(255, 255, 255, .5)), url('../../assets/construction-product.jpg') no-repeat;
   background-size: cover;
-  background-size: 100% 100%;
+  background-size: 100% 100%; */
+  background: linear-gradient(to bottom right, rgb(0, 225, 255), yellow);
 }
+
 .right {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
 
+.subtitle {
+  color: darkblue;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  text-decoration: underline;
+  text-align: left;
+}
+
+.imgcss {
+  height: 250px;
+  width: 300px;
+}
+
+.imgcss:hover {
+  background-color: yellow;
+  -ms-transform: scale(1.2,1.2);
+  /* IE 9 */
+  -webkit-transform: scale(1.2,1.2);
+  /* Safari 3-8 */
+  transform: scale(1.2,1.2);
 }
