--- a/src/app/services/services.component.css
+++ b/src/app/services/services.component.css
@@ -1,12 +1,26 @@
 .service {
-  background: linear-gradient(rgba(255, 255, 255, .5), rgba(255, 255, 255, .5)), url('../../assets/construction-services.jpeg') no-repeat;
+  /* background: linear-gradient(rgba(255, 255, 255, .5), rgba(255, 255, 255, .5)), url('../../assets/construction-services.jpeg') no-repeat;
   background-size: cover;
-  background-size: 100% 100%;
+  background-size: 100% 100%; */
+  background: linear-gradient(to bottom right, rgb(0, 225, 255), yellow);
 
 }
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+
+.subtitle{
+  color: darkblue;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  text-decoration: underline;
+  text-align: left;
+}
+
+.title{
+  color: navy;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+}
+
+.para{
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
 }
