modified images resolution

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -91,16 +91,16 @@
           </div>
           <div class="row">
             <div class="col-sm-3">
-              <img src="../../assets/compact-batching-plant.jpg" alt="Cyprus machine" height="200" width="200">
+              <img src="../../assets/compact-batching-plant.jpg" alt="Cyprus machine" height="150" width="100%">
             </div>
             <div class="col-sm-3">
-              <img src="../../assets/ball crusher.jpg" alt="Cyprus machine" height="200" width="200">
+              <img src="../../assets/ball crusher.jpg" alt="Cyprus machine" height="150" width="100%">
             </div>
             <div class="col-sm-3">
-              <img src="../../assets/toggle.jpeg" alt="Cyprus machine" height="200" width="200">
+              <img src="../../assets/toggle.jpeg" alt="Cyprus machine" height="150" width="100%">
             </div>
             <div class="col-sm-3">
-              <img src="../../assets/bar bend.jpg" alt="Cyprus machine" height="200" width="200">
+              <img src="../../assets/bar bend.jpg" alt="Cyprus machine" height="150" width="100%">
             </div>
           </div>
         </div>
@@ -128,16 +128,16 @@
               </div>
               <div class="row">
                 <div class="col-sm-3">
-                  <img src="../../assets/construction-zone.jpg" alt="Cyprus machine" height="200" width="200">
+                  <img src="../../assets/construction-zone.jpg" alt="Cyprus machine" height="150" width="100%">
                 </div>
                 <div class="col-sm-3">
-                  <img src="../../assets/vdf2.jpg" alt="Cyprus machine" height="200" width="200">
+                  <img src="../../assets/vdf2.jpg" alt="Cyprus machine" height="150" width="100%">
                 </div>
                 <div class="col-sm-3">
-                  <img src="../../assets/cutting.jpg" alt="Cyprus machine" height="200" width="200">
+                  <img src="../../assets/cutting.jpg" alt="Cyprus machine" height="150" width="100%">
                 </div>
                 <div class="col-sm-3">
-                  <img src="../../assets/epo2.jpg" alt="Cyprus machine" height="200" width="200">
+                  <img src="../../assets/epo2.jpg" alt="Cyprus machine" height="150" width="100%">
                 </div>
               </div>
             </div>
