--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -14,15 +14,15 @@
     <br/>
     <div class="row">
       <div class="col-sm-4">
-        <img src="../../assets/epoxy.jpg" alt="Cyprus machine1" height="250" width="300">
+        <img src="../../assets/epoxy.jpg" alt="Cyprus machine1" height="250" width="100%">
         <br/>
       </div>
       <div class="col-sm-4">
-        <img src="../../assets/epoxy-flooring_2.jpg" alt="Cyprus machine1" height="250" width="300">
+        <img src="../../assets/epoxy-flooring_2.jpg" alt="Cyprus machine1" height="250" width="100%">
         <br/>
       </div>
       <div class="col-sm-4">
-        <img src="../../assets/Epoxy_3.jpg" alt="Cyprus machine1" height="250" width="300">
+        <img src="../../assets/Epoxy_3.jpg" alt="Cyprus machine1" height="250" width="100%">
         <br/>
       </div>
     </div>
@@ -46,14 +46,14 @@
     </div>
     <div class="row">
       <div class="col-sm-4">
-        <img src="../../assets/vdf 3.jpg" alt="Cyprus machine2" height="250" width="300">
+        <img src="../../assets/vdf 3.jpg" alt="Cyprus machine2" height="250" width="100%">
       </div>
       <div class="col-sm-4">
-        <img src="../../assets/v.jpg" alt="Cyprus machine2" height="250" width="300">
+        <img src="../../assets/v.jpg" alt="Cyprus machine2" height="250" width="100%">
         <br>
       </div>
       <div class="col-sm-4">
-        <img src="../../assets/vaccum.jpg" alt="Cyprus machine2" height="250" width="300">
+        <img src="../../assets/vaccum.jpg" alt="Cyprus machine2" height="250" width="100%">
         <br>
       </div>
     </div>
@@ -75,13 +75,13 @@
     <br/>
     <div class="row">
       <div class="col-sm-4">
-        <img src="../../assets/water.jpg" alt="Cyprus machine3" height="250" width="300">
+        <img src="../../assets/water.jpg" alt="Cyprus machine3" height="250" width="100%">
       </div>
       <div class="col-sm-4">
-        <img src="../../assets/water_Proof_1.jpg" alt="Cyprus machine3" height="250" width="300">
+        <img src="../../assets/water_Proof_1.jpg" alt="Cyprus machine3" height="250" width="100%">
       </div>
       <div class="col-sm-4">
-        <img src="../../assets/water_Proof.jpg" alt="Cyprus machine3" height="250" width="300">
+        <img src="../../assets/water_Proof.jpg" alt="Cyprus machine3" height="250" width="100%">
       </div>
     </div>
   </div>
