Revert "changes in products and aboutus pages"
This reverts commit 4c0449f14ab322f98869c6e5dde6a13a7d7aefe2.

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -34,7 +34,7 @@
           <div class="col-sm-6">
             <h5 class="subtitle" style="text-align: center">ISO Certification</h5>
             <img src="../../assets/ISO.jpg" height=380 width="450" class="img-center">
-            <div class="details" style="text-align: center">Expiry Date:17/12/2020</div>
+            <div class="details" style="text-align: center">Expiry Date:</div>
           </div>
         </div>
         <div class="row">
