--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -52,7 +52,12 @@
       <div class="col-sm-4">
         <img src="../../assets/batch.jpeg" alt="Cyprus machine3" class="rounded imgcss">
       </div>
-
+      <div class="col-sm-4">
+        <img src="../../assets/mixer_1.jpeg" alt="Cyprus machine3" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/mixer_2.jpeg" alt="Cyprus machine3" class="rounded imgcss">
+      </div>
     </div>
     <hr/>
     <br/>
@@ -107,11 +112,15 @@
     <h5 class="subtitle"> Monkey Hoist</h5>
     <br/>
     <div class="row">
-      
+      <div class="col-sm-4">
+        <img src="../../assets/monkey2.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
       <div class="col-sm-4">
         <img src="../../assets/monkey-hoist_1.jpeg" alt="Cyprus machine4" class="rounded imgcss">
       </div>
-     
+      <div class="col-sm-4">
+        <img src="../../assets/monkey-hoist_2.jpeg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
     </div>
     <hr/>
     <br/>
@@ -137,7 +146,7 @@
         <img src="../../assets/compressor.gif" alt="Cyprus machine4" class="rounded imgcss">
       </div>
       <div class="col-sm-4">
-        <img src="../../assets/ctm.jpg" alt="Cyprus machine4" class="rounded imgcss">
+        <img src="../../assets/compressor-testing-machine_1.jpg" alt="Cyprus machine4" class="rounded imgcss">
       </div>
       <div class="col-sm-4">
         <img src="../../assets/compressor-testing-machine_2.jpg" alt="Cyprus machine4" class="rounded imgcss">
@@ -172,66 +181,8 @@
       <div class="col-sm-4">
         <img src="../../assets/bar_beng_2.jpeg" alt="Cyprus machine4" class="rounded imgcss">
       </div>
-     </div>
-     <hr/>
-    <br/>
-    <h5 class="subtitle">Drawing Instruments</h5>
-    <br/>
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="../../assets/B20-1.jpg" alt="Cyprus machine4" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/al.png" alt="Cyprus machine4" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/Tripod.jpg" alt="Cyprus machine4" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/tribach.jpg" alt="c##" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/vtt.png" alt="c##" class="rounded imgcss">
-      </div> 
-      <div class="col-sm-4">
-        <img src="../../assets/triple prism.jpg" alt="cWW" class="rounded imgcss">
-      </div>
     </div>
-    <hr/>
     <br/>
-    <h5 class="subtitle">Concrete Testing Apparatus</h5>
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="../../assets/flow-table-500x500.jpg" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/slump-cone-apparatus-500x500.jpg" class="rounded imgcss">
-      </div>
-    </div>
-    <hr/>
-  <br/>
-  <h5 class="subtitle">Soil Testing Apparatus</h5>
-  <div class="row">
-    <div class="col-sm-4">
-      <img src="../../assets/soil-cone-penetrometer-500x500.jpg" class="rounded imgcss">
-    </div>
-      <div class="col-sm-4">
-        <img src="../../assets/proctor-compaction-test-apparatus-500x500.jpg" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/rapid-moisture-meter-test-500x500.jpg" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/water-and-soil-analysis-kit-500x500.png" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/manual_liquid_limit_device.jpg" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/speedy-moisture-meter-500x500.jpg" class="rounded imgcss">
-      </div>
-    
-  </div>
 
     <!-- <h5 class="subtitle">Mobile Inline Concrete Batching And Mixing Plant</h5>
     <br/>
