--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -9,28 +9,7 @@
       on a combination of resins and hardeners. When mixed together, the resin and hardener chemically react to form a rigid
       plastic material. The final material is strong, durable, resistant, and bonds extremely well to most base layers. Epoxy
       floors are so strong that they’re often used in heavy traffic areas such as industrial environments, hospitals, or
-      sports facilities.<br>
-      Many facilities that have already experienced the benefits of epoxy flooring are commercial or industrial buildings 
-      such as manufacturing plants, warehouses, pharmaceutical buildings,food or beverage plants, even laboratories. Here
-       are the major benefits of installing epoxy coating in your building:<br>
-       1.Durability: Concrete floors coated in epoxy last longer and resist considerable wear, thus saving you money and 
-           allowing you to manage other business concerns.<br>
-       2.Strength: Once the epoxy has been converted to a solid polymer, it becomes incredibly strong and prevents chemical
-           breakdown.<br>
-       3.Saves time: Epoxy flooring is usually quickly and easily installed, which means less time shutting down production for
-           installation.<br>
-       4.Low maintenance cleaning: Once concrete has the epoxy coating, it is no longer porous since sealed and is therefore 
-           easier to clean.<br>
-       5.Aesthetic: Coatings are usually available in an array of colors and patterns to fit your specific style.<br>
-       6.Chemically resistant: Epoxy coatings can survive continued exposure to potent chemicals, which is perfect for warehouses 
-           or plants that may be exposed to such materials.<br>
-       7.Safety: These coatings are also resistant to slippage, temperature, extreme impact and even fire, maintaining both 
-       the safety of your employees and your building<br>
-       8.Lowers vehicle maintenance: Choosing an epoxy coating can also reduce wear on vehicles in your facility because it is
-        more forgiving on machinery.<br>
-       9.Helps the environment: Lastly, epoxy coatings are a green option for your business because of the reduction in
-        material usage. It is a great alternative to adding on a completely new floor or replacing vehicles due to damage.<br>
-
+      sports facilities.
     </div>
     <br/>
     <div class="row">
@@ -39,7 +18,7 @@
         <br/>
       </div>
       <div class="col-sm-4">
-        <img src="../../assets/pu.jpg" alt="Cyprus machine1" height="250" width="300">
+        <img src="../../assets/epoxy-flooring_2.jpg" alt="Cyprus machine1" height="250" width="300">
         <br/>
       </div>
       <div class="col-sm-4">
@@ -79,32 +58,6 @@
       </div>
     </div>
     <br/>
-    <h5 class="subtitle">KOTASTONE AND GRANITE FITTING</h5>
-    <br/>
-    <div class="para">
-      Kota Stone is a naturally available, fine-grained variety of limestone originated from Kota, Rajasthan. Its alluring natural 
-      look, durability and low cost makes it the most extensively usedmaterialin both the interiors and exteriors of houses and 
-      commercial areas. Kota is well known for its shiny appearance andcharming colours, and ages beautifully over time. 
-      <br/>
-      <br/> 
-      Granite, a quartz-based stone, is often considered the queen of the stones for flooring purposes.Granite is particularly 
-      hard, ensuring durability and water- and staining resistance. Though largely moisture-resistant, it should be sealed in 
-       moisture-prone rooms.
-    </div>
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="../../assets/kota.jpg" alt="Cyprus machine2" height="250" width="300">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/granite2.jpg" alt="Cyprus machine2" height="250" width="300">
-        <br>
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/kota2.jpg" alt="Cyprus machine2" height="250" width="300">
-        <br>
-      </div>
-    </div>
-    <br/>
     <h5 class="subtitle">WATER PROOFING</h5>
     <br/>
     <div class="para">
@@ -132,5 +85,4 @@
       </div>
     </div>
   </div>
-  
 </div>
