changes in services and product page.

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -69,9 +69,6 @@
         <img src="../../assets/inline.jpg" alt="Cyprus machine4" class="rounded imgcss">
       </div>
       <div class="col-sm-4">
-        <img src="../../assets/mobile-inline_1.jpg" alt="Cyprus machine4" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
         <img src="../../assets/mobile-inline_2.jpg" alt="Cyprus machine4" class="rounded imgcss">
       </div>
     </div>
@@ -133,9 +130,6 @@
       <div class="col-sm-4">
         <img src="../../assets/compactor_1.jpeg" alt="Cyprus machine4" class="rounded imgcss">
       </div>
-      <div class="col-sm-4">
-        <img src="../../assets/compactor_2.jpeg" alt="Cyprus machine4" class="rounded imgcss">
-      </div>
     </div>
     <hr/>
     <br/>
@@ -144,9 +138,6 @@
     <div class="row">
       <div class="col-sm-4">
         <img src="../../assets/compressor.gif" alt="Cyprus machine4" class="rounded imgcss">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/compressor-testing-machine_1.jpg" alt="Cyprus machine4" class="rounded imgcss">
       </div>
       <div class="col-sm-4">
         <img src="../../assets/compressor-testing-machine_2.jpg" alt="Cyprus machine4" class="rounded imgcss">
@@ -182,7 +173,81 @@
         <img src="../../assets/bar_beng_2.jpeg" alt="Cyprus machine4" class="rounded imgcss">
       </div>
     </div>
+    <hr/>
     <br/>
+    <h5 class="subtitle">Surveying And Drawing Equipments</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/B20-1.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/automatic-level-500x500.png" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/tribach.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/single prism.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/vernier_transit_theodolite_watts_pattern_1.png" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/topcon-gowin-total-station-500x500.jpg" alt="Cyprus machine4" class="rounded imgcss">
+        </div>
+      <div class="col-sm-4">
+          <img src="../../assets/south-electronic-theodolite-et-02-500x500.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+        <div class="col-sm-4">
+          <img src="../../assets/tripleprism.jpg" alt="Cyprus machine4" class="rounded imgcss">
+        </div>
+
+    </div>
+      <hr/>
+    <br/>
+    <h5 class="subtitle">Cement And Concrete Testing Instruments</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/aggregate-impact-tester-500x500.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/slump-cone-apparatus-500x500.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/flow-table-500x500.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+    <br/>
+    <h5 class="subtitle">Soil Testing Apparatus</h5>
+    <br/>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/cali.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/soil-cone-penetrometer-500x500.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/NL 5017 X - Sand Pouring Cylinder Set.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/rapid-moisture-meter-test-500x500.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/water-and-soil-analysis-kit-500x500.png" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/manual_liquid_limit_device.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/speedy-moisture-meter-500x500.jpg" alt="Cyprus machine4" class="rounded imgcss">
+      </div>
+    </div>
+    <hr/>
+  
 
     <!-- <h5 class="subtitle">Mobile Inline Concrete Batching And Mixing Plant</h5>
     <br/>
