--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -9,7 +9,27 @@
       on a combination of resins and hardeners. When mixed together, the resin and hardener chemically react to form a rigid
       plastic material. The final material is strong, durable, resistant, and bonds extremely well to most base layers. Epoxy
       floors are so strong that they’re often used in heavy traffic areas such as industrial environments, hospitals, or
-      sports facilities.
+      sports facilities.<br/>
+      
+      Here are the major benefits of installing epoxy coating in your building:<br/>
+      <ul>
+      <li>Durability: Concrete floors coated in epoxy last longer and resist considerable wear, thus saving you money and allowing
+       you to manage other business concerns.<br/></li>
+      <li>Strength: Once the epoxy has been converted to a solid polymer, it becomes incredibly strong and prevents chemical 
+       breakdown.<br/></li>
+      <li>Saves time: Epoxy flooring is usually quickly and easily installed, which means less time shutting down production 
+       for installation.<br/></li>
+      <li>Low maintenance cleaning: Once concrete has the epoxy coating, it is no longer porous since sealed and is therefore
+       easier to clean.<br/></li>
+      Aesthetic: Coatings are usually available in an array of colors and patterns to fit your specific style.<br/>
+      <li>Chemically resistant: Epoxy coatings can survive continued exposure to potent chemicals, which is perfect for warehouses
+       or plants that may be exposed to such materials.<br/></li>
+      <li>Safety: These coatings are also resistant to slippage, temperature, extreme impact and even fire, maintaining both
+       the safety of your employees and your building.<br/></li>
+      <li>Brightness: Typically, a high gloss option for coatings can be provided, which improves lighting in your facility
+       to a significant degree due to reflection.<br/></li>
+      
+      </ul>
     </div>
     <br/>
     <div class="row">
@@ -66,7 +86,7 @@
       or underwater to specified depths.
       <br/>
       <br/> Water resistant and waterproof often refer to penetration of water in its liquid state and possibly under pressure,
-      whereas damp proof refers to resistance to humidity or dampness.[1] Permeation of water vapor through a material or
+      whereas damp proof refers to resistance to humidity or dampness.Permeation of water vapor through a material or
       structure is reported as a moisture vapor transmission rate.
       <br/>
       <br/> The hulls of boats and ships were once waterproofed by applying tar or pitch. Modern items may be waterproofed by
